Inicio do script e organização do HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 
     <body>
-        
+        <h1> MINHA LISTA </h1> 
+        <!-- CRIA A DIV PARA ORGANIZAR A FORMATAR A LISTA  -->
+        <div id="div_lista">
+            <!-- CRIAÇÃO DO CAMPO IMPUT TIPO TEXTO PARA ADIÇÃO DE ELEMENTOS NA LISTA -->
+            <input type="text" id="input_texto">
+            <!-- BOTÃO PARA INSERIR OS ELEMENTOS NA LISTA -->
+            <span onclick="novoElemento()" class="botao_add"> + </span>
+
+            <!-- CRIAÇÃO DA LISTA NÃO ORDENADA -->
+            <ul id="lista">
+
+            </ul>
+        </div>
     </body>
 
 
